--- a/Frontend/src/app/components/profile/profile.component.html
+++ b/Frontend/src/app/components/profile/profile.component.html
@@ -2,7 +2,7 @@
   <main class="w-full min-h-screen py-1 md:w-2/3 lg:w-3/4" *ngIf="userData">
     <div class="p-2 md:p-4">
       <div class="w-full px-6 pb-8 mt-8 sm:max-w-xl sm:rounded-lg">
-        <h2 class="pl-6 text-2xl font-bold sm:text-xl">Public Profile</h2>
+        <h2 class="pl-6 text-2xl font-bold sm:text-xl text-white">Public Profile</h2>
 
         <div class="grid max-w-2xl mx-auto mt-8">
           <div class="flex flex-col items-center space-y-5 sm:flex-row sm:space-y-0">
