--- a/Frontend/src/app/components/advertisement/advertisement.component.html
+++ b/Frontend/src/app/components/advertisement/advertisement.component.html
@@ -1,29 +1,30 @@
-<div href="#"
-  class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+<div class="bg-white border border-gray-200 rounded-lg shadow-md p-6 grid grid-cols-1 md:grid-cols-2 gap-4">
 
-  <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ advertisementData.title }}</h5>
+  <div>
+    <h2 class="text-2xl font-bold text-gray-900 mb-4">{{ advertisementData.title }}</h2>
 
-  <ng-container *ngFor="let user of users.data">
-    <ng-container *ngIf="user.id === advertisementData.user_id">
-      <p class="font-normal text-gray-700 dark:text-gray-400">Nombre: {{ user.name }}</p>
+    <ng-container *ngFor="let user of users.data">
+      <ng-container *ngIf="user.id === advertisementData.user_id">
+        <img class="text-gray-700 mb-2" src="{{ user.img }}" alt="User Image" />
+        <p class="text-gray-700 mb-2">Nombre: {{ user.name }}</p>
+      </ng-container>
     </ng-container>
-  </ng-container>
-  <ng-container *ngFor="let programmingLanguage of programmingLanguages.data">
-    <ng-container *ngIf="programmingLanguage.id === advertisementData.programmingLanguage_id">
-      <p class="font-normal text-gray-700 dark:text-gray-400">Lenguaje de Programación: {{
-        programmingLanguage.languageName }}</p>
+
+    <ng-container *ngFor="let programmingLanguage of programmingLanguages.data">
+      <ng-container *ngIf="programmingLanguage.id === advertisementData.programmingLanguage_id">
+        <p class="text-gray-700 mb-2">Lenguaje de Programación: {{ programmingLanguage.languageName }}</p>
+      </ng-container>
     </ng-container>
-  </ng-container>
-  <p class="font-normal text-gray-700 dark:text-gray-400">Clase: {{ advertisementData.class }}</p>
 
-  <p class="font-normal text-gray-700 dark:text-gray-400">Acerca de mí: {{ advertisementData.about_me }}</p>
+    <p class="text-gray-700 mb-2">Precio por Hora: {{ advertisementData.price_hour }} €/h</p>
+    <p class="text-gray-700 mb-2">Disponibilidad: {{ advertisementData.disponibility }}</p>
+    <p class="text-gray-700 mb-2">Clase: {{ advertisementData.class }}</p>
+  </div>
 
-  <p class="font-normal text-gray-700 dark:text-gray-400">Descripción: {{ advertisementData.description }}</p>
-
-  <p class="font-normal text-gray-700 dark:text-gray-400">Precio por Hora: {{ advertisementData.price_hour }} €/h</p>
-
-  <p class="font-normal text-gray-700 dark:text-gray-400">Disponibilidad: {{ advertisementData.disponibility }}</p>
-
-  <p class="font-normal text-gray-700 dark:text-gray-400">Experiencia: {{ advertisementData.experience }}</p>
+  <div>
+    <p class="text-gray-700 mb-2">Acerca de mí: {{ advertisementData.about_me }}</p>
+    <p class="text-gray-700 mb-2">Descripción: {{ advertisementData.description }}</p>
+    <p class="text-gray-700 mb-2">Experiencia: {{ advertisementData.experience }}</p>
+  </div>
 
 </div>
