--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -3,7 +3,8 @@
     <div
       class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
       <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-        <h1 class="text-xl text-center font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+        <h1
+          class="text-xl text-center font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
           Inicia Sesion
         </h1>
         <form class="space-y-4 md:space-y-6" action="#" (ngSubmit)="onSubmit()">
@@ -11,28 +12,28 @@
             <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your email</label>
             <input type="email" name="email" id="email"
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="name@company.com" [(ngModel)]="email" required="">
+              placeholder="name@company.com" [(ngModel)]="email" required email #emailField="ngModel">
+              <div *ngIf="emailField.invalid && (emailField.dirty || emailField.touched)" class="text-red-500">
+                <div *ngIf="emailField.errors?.['required']">
+                  Email is required
+                </div>
+                <div *ngIf="emailField.errors?.['email']">
+                  Invalid email format
+                </div>
+              </div>
           </div>
           <div>
             <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
             <input type="password" name="password" id="password" placeholder="••••••••"
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              [(ngModel)]="password" required="">
-          </div>
-          <div class="flex items-center justify-between">
-            <div class="flex items-start">
-              <div class="flex items-center h-5">
-                <input id="remember" aria-describedby="remember" type="checkbox"
-                  class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-                  required="">
+              [(ngModel)]="password" required #passwordField="ngModel">
+              <div *ngIf="passwordField.invalid && (passwordField.dirty || passwordField.touched)" class="text-red-500">
+                <div *ngIf="passwordField.errors?.['required']">
+                  Password is required
+                </div>
               </div>
-              <div class="ml-3 text-sm">
-                <label for="remember" class="text-gray-500 dark:text-gray-300">Remember me</label>
-              </div>
-            </div>
-            <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-white">Forgot
-              password?</a>
           </div>
+
           <button type="submit"
             class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Sign
             in</button>
@@ -43,6 +44,7 @@
           <div *ngIf="loginSuccess" class="alert alert-danger mt-3">
             {{ loginSuccess }}
           </div>
+          <div *ngIf="errorMessage" class="text-red-500">{{ errorMessage }}</div>
         </form>
       </div>
     </div>
