--- a/Frontend/src/app/components/profile/profile.component.html
+++ b/Frontend/src/app/components/profile/profile.component.html
@@ -1,90 +1,83 @@
-<div class=" w-full flex flex-col gap-5 px-3 md:px-16 lg:px-28 md:flex-row text-[#161931]">
-  <main class="w-full min-h-screen py-1 md:w-2/3 lg:w-3/4" *ngIf="userData">
-    <div class="p-2 md:p-4">
-      <div class="w-full px-6 pb-8 mt-8 sm:max-w-xl sm:rounded-lg">
-        <h2 class="pl-6 text-2xl font-bold sm:text-xl text-white">Public Profile</h2>
+<div class="font-sans antialiased text-gray-900 leading-normal tracking-wider bg-cover">
 
-        <div class="grid max-w-2xl mx-auto mt-8">
-          <div class="flex flex-col items-center space-y-5 sm:flex-row sm:space-y-0">
+  <div class="max-w-4xl flex items-center h-auto lg:h-screen flex-wrap mx-auto my-32 lg:my-0">
 
-            <img class="object-cover w-40 h-40 p-1 rounded-full ring-2 ring-indigo-300 dark:ring-indigo-500"
-              src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGZhY2V8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
-              alt="Bordered avatar">
+    <!-- Main Col -->
+    <div id="profile"
+      class="w-full lg:w-3/5 rounded-lg lg:rounded-l-lg lg:rounded-r-none shadow-2xl bg-white opacity-75 mx-6 lg:mx-0">
 
-            <div class="flex flex-col space-y-5 sm:ml-8">
-              <button type="button"
-                class="py-3.5 px-7 text-base font-medium text-indigo-100 focus:outline-none bg-[#202142] rounded-lg border border-indigo-200 hover:bg-indigo-900 focus:z-10 focus:ring-4 focus:ring-indigo-200 ">
-                Change picture
-              </button>
-              <button type="button"
-                class="py-3.5 px-7 text-base font-medium text-indigo-900 focus:outline-none bg-white rounded-lg border border-indigo-200 hover:bg-indigo-100 hover:text-[#202142] focus:z-10 focus:ring-4 focus:ring-indigo-200 ">
-                Delete picture
-              </button>
-            </div>
-          </div>
+      <div class="p-4 md:p-12 text-center lg:text-left">
+        <!-- Image for mobile view -->
+        <div class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover bg-center"></div>
 
-          <div class="items-center mt-8 sm:mt-14 text-[#202142]">
-
-            <div
-              class="flex flex-col items-center w-full mb-2 space-x-0 space-y-2 sm:flex-row sm:space-x-4 sm:space-y-0 sm:mb-6">
-              <div class="w-full">
-                <label for="first_name" class="block mb-2 text-sm font-medium text-indigo-900 dark:text-white">Your
-                  first name</label>
-                <input type="text" id="username"
-                  class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
-                  placeholder="Username" [(ngModel)]="userData.username" required>
-              </div>
-
-              <div class="w-full">
-                <label for="last_name" class="block mb-2 text-sm font-medium text-indigo-900 dark:text-white">Your
-                  last name</label>
-                <input type="text" id="name"
-                  class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
-                  placeholder="Name" [(ngModel)]="userData.name" required>
-              </div>
-            </div>
-
-
-            <div class="mb-2 sm:mb-6">
-              <label for="last_name" class="block mb-2 text-sm font-medium text-indigo-900 dark:text-white">Your
-                Email</label>
-              <input type="email" id="email"
-                class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
-                placeholder="Email" [(ngModel)]="userData.email" required>
-            </div>
-
-            <div class="mb-2 sm:mb-6">
-              <label for="email" class="block mb-2 text-sm font-medium text-indigo-900 dark:text-white">Born
-                Date</label>
-              <input type="text" id="born_date"
-                class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
-                placeholder="Born Date" [(ngModel)]="userData.born_date" required>
-            </div>
-
-            <div class="mb-2 sm:mb-6">
-              <label for="profession"
-                class="block mb-2 text-sm font-medium text-indigo-900 dark:text-white">Area</label>
-              <input type="text" id="area"
-                class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
-                placeholder="Area" [(ngModel)]="userData.area" required>
-            </div>
-
-            <div class="mb-2 sm:mb-6">
-              <label for="profession" class="block mb-2 text-sm font-medium text-indigo-900 dark:text-white">Image
-                URL</label>
-              <input type="text" id="img"
-                class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
-                placeholder="Image URL" [(ngModel)]="userData.img" required>
-            </div>
-
-            <div class="flex justify-end">
-              <button type="button" (click)="saveChanges()"
-                class="text-white bg-indigo-700  hover:bg-indigo-800 focus:ring-4 focus:outline-none focus:ring-indigo-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-indigo-600 dark:hover:bg-indigo-700 dark:focus:ring-indigo-800">Save</button>
-            </div>
-
-          </div>
+        <h1 class="text-3xl font-bold pt-8 lg:pt-0">Your name</h1>
+        <input type="text" id="username"
+          class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
+          placeholder="Username" [(ngModel)]="userData.username" required>
+        <h1 class="text-3xl font-bold pt-8 lg:pt-0">Name</h1>
+        <input type="text" id="username"
+          class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
+          placeholder="Username" [(ngModel)]="userData.name" required>
+        <div class="mx-auto lg:mx-0 w-4/5 pt-3 border-b-2 border-green-500 opacity-25"></div>
+        <p class="pt-4 text-base font-bold flex items-center justify-center lg:justify-start">
+          <svg class="h-4 fill-current text-green-700 pr-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+            <path
+              d="M9 12H1v6a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-6h-8v2H9v-2zm0-1H0V5c0-1.1.9-2 2-2h4V2a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v1h4a2 2 0 0 1 2 2v6h-9V9H9v2zm3-8V2H8v1h4z" />
+          </svg>
+          Email <input type="text" id="username"
+            class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
+            placeholder="Username" [(ngModel)]="userData.email" required>
+        </p>
+        <p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start">
+          <svg class="h-4 fill-current text-green-700 pr-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+            <path
+              d="M10 20a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm7.75-8a8.01 8.01 0 0 0 0-4h-3.82a28.81 28.81 0 0 1 0 4h3.82zm-.82 2h-3.22a14.44 14.44 0 0 1-.95 3.51A8.03 8.03 0 0 0 16.93 14zm-8.85-2h3.84a24.61 24.61 0 0 0 0-4H8.08a24.61 24.61 0 0 0 0 4zm.25 2c.41 2.4 1.13 4 1.67 4s1.26-1.6 1.67-4H8.33zm-6.08-2h3.82a28.81 28.81 0 0 1 0-4H2.25a8.01 8.01 0 0 0 0 4zm.82 2a8.03 8.03 0 0 0 4.17 3.51c-.42-.96-.74-2.16-.95-3.51H3.07zm13.86-8a8.03 8.03 0 0 0-4.17-3.51c.42.96.74 2.16.95 3.51h3.22zm-8.6 0h3.34c-.41-2.4-1.13-4-1.67-4S8.74 3.6 8.33 6zM3.07 6h3.22c.2-1.35.53-2.55.95-3.51A8.03 8.03 0 0 0 3.07 6z" />
+          </svg>
+          Born Date
+          <input type="text" id="username"
+            class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
+            placeholder="Username" [(ngModel)]="userData.born_date" required>
+        </p>
+        <p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start">
+          <svg class="h-4 fill-current text-green-700 pr-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+            <path
+              d="M10 20a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm7.75-8a8.01 8.01 0 0 0 0-4h-3.82a28.81 28.81 0 0 1 0 4h3.82zm-.82 2h-3.22a14.44 14.44 0 0 1-.95 3.51A8.03 8.03 0 0 0 16.93 14zm-8.85-2h3.84a24.61 24.61 0 0 0 0-4H8.08a24.61 24.61 0 0 0 0 4zm.25 2c.41 2.4 1.13 4 1.67 4s1.26-1.6 1.67-4H8.33zm-6.08-2h3.82a28.81 28.81 0 0 1 0-4H2.25a8.01 8.01 0 0 0 0 4zm.82 2a8.03 8.03 0 0 0 4.17 3.51c-.42-.96-.74-2.16-.95-3.51H3.07zm13.86-8a8.03 8.03 0 0 0-4.17-3.51c.42.96.74 2.16.95 3.51h3.22zm-8.6 0h3.34c-.41-2.4-1.13-4-1.67-4S8.74 3.6 8.33 6zM3.07 6h3.22c.2-1.35.53-2.55.95-3.51A8.03 8.03 0 0 0 3.07 6z" />
+          </svg>
+          Area
+          <input type="text" id="username"
+            class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
+            placeholder="Username" [(ngModel)]="userData.area" required>
+        </p>
+        <p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start">
+          <svg class="h-4 fill-current text-green-700 pr-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+            <path
+              d="M10 20a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm7.75-8a8.01 8.01 0 0 0 0-4h-3.82a28.81 28.81 0 0 1 0 4h3.82zm-.82 2h-3.22a14.44 14.44 0 0 1-.95 3.51A8.03 8.03 0 0 0 16.93 14zm-8.85-2h3.84a24.61 24.61 0 0 0 0-4H8.08a24.61 24.61 0 0 0 0 4zm.25 2c.41 2.4 1.13 4 1.67 4s1.26-1.6 1.67-4H8.33zm-6.08-2h3.82a28.81 28.81 0 0 1 0-4H2.25a8.01 8.01 0 0 0 0 4zm.82 2a8.03 8.03 0 0 0 4.17 3.51c-.42-.96-.74-2.16-.95-3.51H3.07zm13.86-8a8.03 8.03 0 0 0-4.17-3.51c.42.96.74 2.16.95 3.51h3.22zm-8.6 0h3.34c-.41-2.4-1.13-4-1.67-4S8.74 3.6 8.33 6zM3.07 6h3.22c.2-1.35.53-2.55.95-3.51A8.03 8.03 0 0 0 3.07 6z" />
+          </svg>
+          Image Url <input type="text" id="username"
+            class="bg-indigo-50 border border-indigo-300 text-indigo-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-2.5 "
+            placeholder="Username" [(ngModel)]="userData.img" required>
+        </p>
+        
+        <div class="pt-12 pb-8">
+          <button (click)="saveChanges()"
+            class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full">
+            Get In Touch
+          </button>
         </div>
+
       </div>
+
     </div>
-  </main>
+
+    <!-- End of Main Col -->
+
+    <!-- Side Col -->
+    <div class="w-full lg:w-2/5">
+      <!-- Profile image with adjusted size -->
+      <img [src]="userData.img" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block h-48 w-48">
+    </div>
+    <!-- End of Side Col -->
+
+  </div>
+
 </div>
