--- a/Frontend/src/app/components/mis-anuncios/mis-anuncios.component.html
+++ b/Frontend/src/app/components/mis-anuncios/mis-anuncios.component.html
@@ -14,7 +14,9 @@
         </ng-container>
       </ng-container>
   
-      <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Modificar</button>
+      <button (click)="modificarAnuncio(advertisement.id)" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Modificar</button>   
+      <button (click)="borrarAnuncio(advertisement.id)" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Borrar Anuncio</button>
+
     </div>
     
     <!-- Botón para crear un nuevo anuncio -->
