--- a/Frontend/src/app/components/profile/profile.component.html
+++ b/Frontend/src/app/components/profile/profile.component.html
@@ -51,6 +51,14 @@
             class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full">
             Save
           </button>
+          <label class="flex items-center">
+            <input checked id="green-checkbox" type="checkbox" [(ngModel)]="deleteCheckbox" (change)="updateDeleteButtonClass()" class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+            Delete
+          </label>
+          
+          <button type="button" (click)="deleteUser()" [class]="deleteButtonClass + ' text-white hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900'" [disabled]="!deleteCheckbox">Eliminar</button>
+
+
         </div>
 
       </div>
